New Sub Form flow
Added Wufoo embedded code for Sub Beta Form

Removed previous form syntax in `subscription.html`
Removed related stylesheets, js, and images

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,9 +16,9 @@
     </div>
 
 </div>
-
+<!-- 
 {{ if eq $.Params.title "Subscription" }}
 <header id="header" class="info">
     <h2 class="">Vibe Subscription Beta Group Pre-Order</h2>
 </header>
-{{ end }}
+{{ end }} -->
