--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,11 +26,11 @@
 	-->
 	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
 	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
-	{{ if eq $.Params.title "Subscription" }}
+	<!-- {{ if eq $.Params.title "Subscription" }}
 		<link rel="stylesheet" href={{ "/css/structure.css" | relURL }} />
 		<link rel="stylesheet" href={{ "/css/form.css" | relURL }} />
 		<link rel="stylesheet" href={{ "/css/theme.css" | relURL }} />
-	{{ end }}
+	{{ end }} -->
 
 
 	<!-- JQuery -->
@@ -208,7 +208,7 @@
 	<!-- End Firebase App -->
 
 	<!-- Subscription Forms -->
-	<script src="/js/wufoo.js" type="text/javascript"></script>
+	<!-- <script src="/js/wufoo.js" type="text/javascript"></script> -->
 	<!--[if lt IE 10]>
 	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
