Added subscription confirmation page
Added new  MD file for message
Added conditional logic in `single.html` to load appropiate content
Added styling in `cssv.css`

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,6 +6,13 @@
     {{ partial "signin.html" . }}
 {{ else if eq $.Params.title "Subscription" }}
     {{ partial "subscription.html" . }}
+{{ else if eq $.Params.title "Subscription Confirmation" }}
+    <div class="authHead plainHead">
+        {{ partial "header.html" . }}
+    </div>
+    <div class="confirmation">
+        Thank you for subscribing to the Vibe Beta
+    </div>
 {{ else }}
     {{ partial "header.html" . }}
     <div class="heroD">
