--- a/layouts/partials/signin.html
+++ b/layouts/partials/signin.html
@@ -21,7 +21,7 @@
     ui.start('#firebaseui-auth-container', uiConfig);
 </script>
 
-<div class="authHead">
+<div class="authHead plainHead">
     {{ partial "header.html" . }}
 </div>
 
