--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -479,8 +479,17 @@ margin-top:60px;
 
 @media only screen and (max-width: 650px) {
 
+    .confirmation {
+        padding: 60px 10% 0;
+        font-size: 24px;
+    }
+
     .authHead {
         height: 45vh;
+    }
+
+    .plainHead {
+        height: 35vh;
     }
 
     .firebaseui-auth-header {
