Updated confirmation message

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
         {{ partial "header.html" . }}
     </div>
     <div class="confirmation">
-        Thank you for subscribing to the Vibe Beta
+        Thank you for subscribing to Vibe
     </div>
 {{ else }}
     {{ partial "header.html" . }}
