--- a/css/cssv.css
+++ b/css/cssv.css
@@ -9,7 +9,6 @@ html {
 }
 
 input {
-    -webkit-appearance: none;
     -webkit-border-radius: 0;
     border-radius: 0
 }
@@ -30,19 +29,19 @@ body {
     justify-content: space-around;
     height: auto;
     width: 100%;
-}
-
+  }
+  
 .headerCol1 {
     margin: 40px 0;
 }
-
-.headerCol2 {
+  
+  .headerCol2 {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
     margin: 40px 0;
-}
+  }
 
 .hero {
     width: 100%;
@@ -54,7 +53,7 @@ body {
     width: 100vw;
     text-align: center;
     vertical-align: middle;
-    background-image: url(../img/vherobg.jpg);
+    background-image: url(/img/vherobg.jpg);
     background-size: cover;
     margin-top: -240px
 }
@@ -92,33 +91,33 @@ body {
 .logo {
     width: 127px;
     height: 130px;
-}
-
-.blog {
-    text-decoration: none;
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.2rem;
-    font-weight: 700;
-    letter-spacing: 2px;
-    color: black;
-}
-
-.fb {
-    height: 18.75px;
-    margin-right: 20px;
-}
-
-.insta {
-    height: 18.75px;
-    margin-right: 20px;
-}
-
-.twitter {
-    margin-right: 20px;
-    height: 18.75px;
-}
-
-.pin {
+  }
+  
+  .blog {
+      text-decoration: none;
+      font-family: 'Open Sans Condensed', sans-serif;
+      font-size: 1.2rem;
+      font-weight: 700;
+      letter-spacing: 2px;
+      color: black;
+  }
+  
+  .fb {
+      height: 18.75px;
+      margin-right: 20px;
+  }
+  
+  .insta {
+      height: 18.75px;
+      margin-right: 20px;
+  }
+  
+  .twitter {
+      margin-right: 20px;
+      height: 18.75px;
+  }
+  
+  .pin {
     height: 18.75px;
 }
 
@@ -132,16 +131,16 @@ body {
     margin: 0 auto;
 }
 
-.heroD {
+.heroD{
     width: 100%;
     background-color: #f2f2f2;
     background-repeat: repeat;
     background-size: cover;
     background-position: 50% 50%;
-    width: 100%;
+    width:100%;
     text-align: center;
     vertical-align: middle;
-    background-image: url(../img/vherobg.jpg);
+    background-image: url(/img/vherobg.jpg);
     background-size: cover;
     margin-top: -240px;
     padding-bottom: 125px;
@@ -149,23 +148,23 @@ body {
     padding-top: 247px;
 }
 
-.headerTextD {
-    font-size: 45px;
+.headerTextD{
+    font-size:45px;
     font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 700;
-    letter-spacing: 2px;
-    padding-left: 10%;
-    padding-right: 10%;
+    font-weight:700;
+    letter-spacing:2px;
+    padding-left:10%;
+    padding-right:10%;
 }
 
-.introTextD {
+.introTextD{
     font-family: 'Open Sans', sans-serif;
-    padding-left: 20%;
-    padding-right: 20%;
-    font-size: 16px;
-    letter-spacing: 2px;
-    font-weight: 300;
-    line-height: 40px;
+    padding-left:20%;
+    padding-right:20%;
+    font-size:16px;
+    letter-spacing:2px;
+    font-weight:300;
+    line-height:40px;
 }
 
 #intro {
@@ -192,7 +191,7 @@ body {
     padding-left: 60px;
     padding-right: 60px;
     padding-bottom: 60px;
-    background: url(../img/vbackground.jpg);
+    background: url(/img/vbackground.jpg);
     background-position: right;
     background-repeat: no-repeat;
     background-size: contain;
@@ -243,7 +242,7 @@ body {
     text-align: left;
     background-color: rgba(241, 241, 241, .95);
     border-right: 14px solid #fff;
-    background-image: url(../img/vline.jpg);
+    background-image: url(/img/vline.jpg);
     background-position: bottom;
     background-repeat: repeat-x
 }
@@ -260,7 +259,7 @@ body {
     vertical-align: top;
     text-align: left;
     background-color: rgba(241, 241, 241, .95);
-    background-image: url(../img/vline.jpg);
+    background-image: url(/img/vline.jpg);
     background-position: bottom;
     background-repeat: repeat-x
 }
@@ -276,7 +275,7 @@ body {
     text-align: left;
     border-left: 14px solid #fff;
     background-color: rgba(241, 241, 241, .95);
-    background-image: url(../img/vline.jpg);
+    background-image: url(/img/vline.jpg);
     background-position: bottom;
     background-repeat: repeat-x
 }
@@ -383,7 +382,7 @@ body {
     height: 100px;
 }
 
-.netlify-identity-menu {
+/* .netlify-identity-menu {
     display: flex;
     justify-content: center;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -392,11 +391,11 @@ body {
     letter-spacing: 2px;
     padding: 0;
     margin: 0 auto;
-}
+  }
 
 .netlify-identity-item {
     list-style-type: none;
-}
+  }
 
 .netlify-identity-signup {
     text-decoration: none;
@@ -407,14 +406,14 @@ body {
 .netlify-identity-signup:after {
     content: "/";
     margin-left: 2px;
-}
+ }
 
 .netlify-identity-login {
     text-decoration: none;
     color: black;
     margin: 0;
     margin-left: 2px;
-}
+} */
 
 .divider {
     display: inline;
@@ -670,153 +669,59 @@ a.footerLink:hover {
     -o-animation-delay: 15s;
     -ms-animation-delay: 15s;
     animation-delay: 15s
-}
+} 
 
 @-webkit-keyframes rotateWord {
-    0% {
-        opacity: 0;
-    }
-    2% {
-        opacity: 0;
-        -webkit-transform: translateY(-30px);
-    }
-    5% {
-        opacity: 1;
-        -webkit-transform: translateY(0px);
-    }
-    17% {
-        opacity: 1;
-        -webkit-transform: translateY(0px);
-    }
-    20% {
-        opacity: 0;
-        -webkit-transform: translateY(30px);
-    }
-    80% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 0; }
+    2% { opacity: 0; -webkit-transform: translateY(-30px); }
+    5% { opacity: 1; -webkit-transform: translateY(0px);}
+    17% { opacity: 1; -webkit-transform: translateY(0px); }
+    20% { opacity: 0; -webkit-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
 }
-
 @-moz-keyframes rotateWord {
-    0% {
-        opacity: 0;
-    }
-    2% {
-        opacity: 0;
-        -moz-transform: translateY(-30px);
-    }
-    5% {
-        opacity: 1;
-        -moz-transform: translateY(0px);
-    }
-    17% {
-        opacity: 1;
-        -moz-transform: translateY(0px);
-    }
-    20% {
-        opacity: 0;
-        -moz-transform: translateY(30px);
-    }
-    80% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 0; }
+    2% { opacity: 0; -moz-transform: translateY(-30px); }
+    5% { opacity: 1; -moz-transform: translateY(0px);}
+    17% { opacity: 1; -moz-transform: translateY(0px); }
+    20% { opacity: 0; -moz-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
 }
-
 @-o-keyframes rotateWord {
-    0% {
-        opacity: 0;
-    }
-    2% {
-        opacity: 0;
-        -o-transform: translateY(-30px);
-    }
-    5% {
-        opacity: 1;
-        -o-transform: translateY(0px);
-    }
-    17% {
-        opacity: 1;
-        -o-transform: translateY(0px);
-    }
-    20% {
-        opacity: 0;
-        -o-transform: translateY(30px);
-    }
-    80% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 0; }
+    2% { opacity: 0; -o-transform: translateY(-30px); }
+    5% { opacity: 1; -o-transform: translateY(0px);}
+    17% { opacity: 1; -o-transform: translateY(0px); }
+    20% { opacity: 0; -o-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
 }
-
 @-ms-keyframes rotateWord {
-    0% {
-        opacity: 0;
-    }
-    2% {
-        opacity: 0;
-        -ms-transform: translateY(-30px);
-    }
-    5% {
-        opacity: 1;
-        -ms-transform: translateY(0px);
-    }
-    17% {
-        opacity: 1;
-        -ms-transform: translateY(0px);
-    }
-    20% {
-        opacity: 0;
-        -ms-transform: translateY(30px);
-    }
-    80% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 0; }
+    2% { opacity: 0; -ms-transform: translateY(-30px); }
+    5% { opacity: 1; -ms-transform: translateY(0px);}
+    17% { opacity: 1; -ms-transform: translateY(0px); }
+    20% { opacity: 0; -ms-transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
 }
-
 @keyframes rotateWord {
-    0% {
-        opacity: 0;
-    }
-    2% {
-        opacity: 0;
-        transform: translateY(-30px);
-    }
-    5% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    17% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
-    20% {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    80% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-    }
+    0% { opacity: 0; }
+    2% { opacity: 0; transform: translateY(-30px); }
+    5% { opacity: 1; transform: translateY(0px);}
+    17% { opacity: 1; transform: translateY(0px); }
+    20% { opacity: 0; transform: translateY(30px); }
+    80% { opacity: 0; }
+    100% { opacity: 0; }
 }
 
-.showBr {
-    display: none;
+.showBr{
+display:none;
 }
 
-/*
+
 .content-slider {
 width: 100%;
 height: 90px;
@@ -833,7 +738,7 @@ position: relative;
 .mask {
 overflow: hidden;
 height: 90px;
-borer: 1px solid red;
+border: 1px solid red;
 }
 
 .slider ul {
@@ -875,110 +780,153 @@ animation-delay: 4s;
 }
 
 .slider li.anim.cycle3 {
--webkit-animation-delay: 8s;
-animation-delay: 8s;
+    -webkit-animation-delay: 8s;
+    animation-delay: 8s;
 }
 
 @-moz-keyframes cycle {
-0% {
-    top: -50px;
-    opacity: 0;
-}
-16% {
-    top: -50px;
-    opacity: 0;
-}
-20% {
-    top: 0px;
-    opacity: 1;
-}
-24% {
-    top: 0px;
-    opacity: 1;
-}
-36% {
-    top: 0px;
-    opacity: 1;
-    z-index: 0;
-}
-40% {
-    top: 50px;
-    opacity: 0;
-    z-index: 0;
-}
-41% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-100% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
+    0% {
+        top: -50px;
+        opacity: 0;
+    }
+    16% {
+        top: -50px;
+        opacity: 0;
+    }
+    20% {
+        top: 0px;
+        opacity: 1;
+    }
+    24% {
+        top: 0px;
+        opacity: 1;
+    }
+    36% {
+        top: 0px;
+        opacity: 1;
+        z-index: 0;
+    }
+    40% {
+        top: 50px;
+        opacity: 0;
+        z-index: 0;
+    }
+    41% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+    100% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
 }
 @-webkit-keyframes cycle {
-0% {
-    top: -50pxx;
-    opacity: 0;
-}
-16% {
-    top: -50pxx;
-    opacity: 0;
-}
-20% {
-    top: 0px;
-    opacity: 1;
-}
-24% {
-    top: 0px;
-    opacity: 1;
-}
-36% {
-    top: 0px;
-    opacity: 1;
-    z-index: 0;
-}
-40% {
-    top: 50px;
-    opacity: 0;
-    z-index: 0;
-}
-41% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-100% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-}  */
+    0% {
+        top: -50pxx;
+        opacity: 0;
+    }
+    16% {
+        top: -50pxx;
+        opacity: 0;
+    }
+    20% {
+        top: 0px;
+        opacity: 1;
+    }
+    24% {
+        top: 0px;
+        opacity: 1;
+    }
+    36% {
+        top: 0px;
+        opacity: 1;
+        z-index: 0;
+    }
+    40% {
+        top: 50px;
+        opacity: 0;
+        z-index: 0;
+    }
+    41% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+    100% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+} 
 
+/* Confirmation Message */
+.confirmation {
+    font-family: 'Open Sans', sans-serif;
+    padding: 140px 10% 80px;
+    font-size: 30px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    line-height: 40px;
+    text-align: center;
+}
+/* End Confirmation Message */
+
+/* Start SingIn Page Layout */
+.authHead {
+    background-color: #f2f2f2;
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    height: 34vh;
+    width: 100vw;
+    text-align: center;
+    vertical-align: middle;
+    background-image: url(/img/vherobg.jpg);
+    background-size: cover;
+}
+
+.firebaseui-auth-header {
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: #000;
+    margin: 0 auto 40px;
+}
+
+#firebaseui-auth-container {
+    margin: 10% auto;
+}
+/* End SignIn Page Layout */
+
+
+/* Start Account Page Layout */
 .headerAccount {
     padding: 0 10%;
     margin: 20px auto 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 40px;
-}
-
+  }
+  
 .header1 {
     margin: 40px 0;
 }
-
+  
 .header2 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
     margin: 40px 0;
-}
+  }
 
 .logo1 {
     width: 127px;
     height: 130px;
-}
+  }
 
 .logout {
     text-decoration: none;
@@ -1000,6 +948,7 @@ animation-delay: 8s;
 
 .input {
     font-size: 14px;
+    font-weight: 200;
     padding-bottom: 5px;
     border: none;
     border-bottom: 1px solid #E0E0E0;
@@ -1012,15 +961,12 @@ form p {
 ::-webkit-input-placeholder {
     color: #A0A0A0;
 }
-
 ::-moz-placeholder {
     color: #A0A0A0;
 }
-
 :-ms-input-placeholder {
     color: #A0A0A0;
 }
-
 :-moz-placeholder {
     color: #A0A0A0;
 }
@@ -1058,7 +1004,7 @@ form p {
 }
 
 .subscription {
-    margin: 60px auto 60px;
+    margin: 60px auto 0;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     grid-column-gap: 40px;
@@ -1107,8 +1053,15 @@ form p {
 
 .ship span {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
+}
+
+.ship span div {
+    display: flex; 
+    flex-basis: calc(50% - 0px);  
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .bill {
@@ -1126,6 +1079,7 @@ form p {
 }
 
 .bill span {
+    min-height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1152,15 +1106,11 @@ form p {
 }
 
 .subOptions {
-    margin: 60px 0 30px;
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr;
-    grid-column-gap: 60px;
+    margin: 0 0 10px 350px ;
 }
 
 .subButton {
     border: none;
-    border: 1px solid #E0E0E0;
     background: none;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -1171,20 +1121,190 @@ form p {
 }
 
 .update {
-    /* display: flex;
-    justify-content: flex-start; */
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 2fr;
-    grid-column-gap: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 100px;
 }
 
 .finalButton {
     margin: 0;
     padding: 15px 30px;
-    background: #404040;
+    background-color: #404040;
+    border-bottom: 3px solid #2B2A2A;
+    /* text-shadow: 0px -2px #2B2A2A; */
     color: #E0E0E0;
+    text-decoration: none;
+    outline: none;
 }
 
-.heroD {
-    background-image: none !important;
+.animate {
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
 }
+
+.action-button {
+    margin: 0px 10px 10px 3px;
+	border-radius: 10px;
+}
+
+.action-button:active {
+	transform: translate(0px,5px);
+    -webkit-transform: translate(0px,5px);
+	border-bottom: 3px solid;
+}
+
+/* End Account Page Layout */
+
+
+/* End Pause/Activate Buttons */
+
+*:before, *:after {
+    box-sizing: inherit;
+    -webkit-font-smoothing: antialiased;
+}
+  
+.trigger input:focus {
+    box-shadow: none;
+    outline: 0;
+}
+
+.trigger input[type="text"] {
+    width: 400px;
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+  
+.trigger {
+    margin: 16px 0;
+    background: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    line-height: 25px;
+}
+  
+/* Code for checkboxes */
+.radio {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+    margin-right: .75rem;
+    cursor: pointer;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    outline: 0;
+    vertical-align: middle;
+    /*
+    Iterate over map and autogenerate helper classes.
+    See "https://codepen.io/fxm90/pen/zGjjrJ" for an example
+    */
+}
+.radio:before, .radio:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.radio:before {
+    z-index: 1;
+    border: 2px solid #f2f2f2;
+    -webkit-transition: border-color .3s ease-in-out;
+    transition: border-color .3s ease-in-out;
+}
+.radio:after {
+    z-index: 2;
+    border-radius: 50%;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+    transition: -webkit-transform .3s ease-in-out;
+    transition: transform .3s ease-in-out;
+    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
+}
+.radio:hover:after {
+    -webkit-transform: scale(0.3);
+            transform: scale(0.3);
+}
+.radio:checked:after {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+}
+.radio--red:checked:before {
+    border-color: #f44336;
+}
+.radio--red:after {
+    background: #f44336;
+}
+.radio--green:checked:before {
+    border-color: #4caf50;
+}
+.radio--green:after {
+    background: #4caf50;
+}
+.radio--blue-grey:checked:before {
+    border-color: #607d8b;
+}
+.radio--blue-grey:after {
+    background: #607d8b;
+}
+
+.active {
+    display: inline-block;
+}
+
+.pause {
+    display: inline-block;
+    max-width: 14%;
+}
+
+.month1, .month2, .month3 {
+    margin-bottom: 26px;
+}
+
+.month2, .month3 {
+    margin-left: 20px;
+}
+
+/* Triggers */
+.trigger input[type="radio"] + .msg {
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+    transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+}
+
+.trigger input[type="radio"]:checked + .msg {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+.msg {
+    display: block;
+    margin: 0 auto;
+    padding: 0 0 8px;
+    border-radius: 3px;
+}
+
+/* End Pause/Activate Buttons */
+
+/* Sub Form */
+#wufoo-z1un51nb0s6pks0 {
+    margin-top: 20px ;
+    display: grid;
+    grid-template-columns: [full-start] minmax(1em, 1fr)
+    [main-start] minmax(0, 34rem)
+    [main-end] minmax(1em, 1fr) [full-end];
+}
+
+#wufoo-z1un51nb0s6pks0 > * {
+    grid-column: main;
+}
+/* End Sub Form */
