--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,12 +26,6 @@
 	-->
 	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
 	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
-	<!-- {{ if eq $.Params.title "Subscription" }}
-		<link rel="stylesheet" href={{ "/css/structure.css" | relURL }} />
-		<link rel="stylesheet" href={{ "/css/form.css" | relURL }} />
-		<link rel="stylesheet" href={{ "/css/theme.css" | relURL }} />
-	{{ end }} -->
-
 
 	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -48,7 +42,7 @@
 	<!-- Conditional Logic for Lead Pixels (FB, Pintrest, Taboola) [Only loads in Thank You Confirmation Page] -->
 	{{ if eq $.Params.title "Thank You, You're Confirmed in the Vibe Beta" }}
 		
-		<!-- Facebook Pixel Code -->
+		<!-- Facebook Lead Pixel Code -->
 		<script>
             ! function (f, b, e, v, n, t, s) {
                 if (f.fbq) return;
@@ -69,7 +63,7 @@
             }(window,
                 document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
             fbq('init', '365893380475713'); // Insert your pixel ID here.
-            fbq('track', 'PageView');
+            // fbq('track', 'PageView');
             fbq('track', 'Lead');
         </script>
     
@@ -78,7 +72,8 @@
         <!-- DO NOT MODIFY -->
         <!-- End Facebook Pixel Code -->
 
-		<!-- Start Taboola -->
+
+		<!-- Start Taboola SignUp Pixel -->
 		<script type="text/javascript">
 			window._tfa = window._tfa || [];
 			_tfa.push({
@@ -89,7 +84,8 @@
 		<script src="//cdn.taboola.com/libtrc/taboolaaccount-hlvibeltdco/tfa.js"></script>
 		<!-- End Taboola -->
 
-		<!-- Start Pintrest Pixel -->
+
+		<!-- Start Pintrest SignUp Pixel -->
 		<script type="text/javascript">
 			! function (e) {
 				if (!window.pintrk) {
@@ -113,13 +109,8 @@
 			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
 		</noscript>
 
-		<script>
-			pintrk('track', 'pagevisit');
-		</script>
-
 		<noscript>
-			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
-			/>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"/>
 		</noscript>
 
 		<script>
@@ -130,15 +121,82 @@
 			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=signup&noscript=1"/>
 		</noscript>
 		<!-- End Pintrest Pixel -->
+
 	{{ else }}
 	{{ end }}
 	<!-- End Lead Pixels -->
 
+
 	<!-- Subscription Confirmation Pixel -->
 	{{ if eq $.Params.title "Subscription Confirmation" }}
+		
+		<!-- Facebook Purchase Pixel Code -->
 		<script>
+			! function (f, b, e, v, n, t, s) {
+				if (f.fbq) return;
+				n = f.fbq = function () {
+					n.callMethod ?
+						n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+				};
+				if (!f._fbq) f._fbq = n;
+				n.push = n;
+				n.loaded = !0;
+				n.version = '2.0';
+				n.queue = [];
+				t = b.createElement(e);
+				t.async = !0;
+				t.src = v;
+				s = b.getElementsByTagName(e)[0];
+				s.parentNode.insertBefore(t, s)
+			}(window,
+				document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+			fbq('init', '365893380475713'); // Insert your pixel ID here.
 			fbq('track', 'Purchase');
 		</script>
+
+		<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"/></noscript>
+		<!-- DO NOT MODIFY -->
+		<!-- End Facebook Pixel Code -->
+
+
+		<!-- Start Pintrest Checkout Pixel -->
+		<script type="text/javascript">
+			! function (e) {
+				if (!window.pintrk) {
+					window.pintrk = function () {
+						window.pintrk.queue.push(Array.prototype.slice.call(arguments))
+					};
+					var n = window.pintrk;
+					n.queue = [], n.version = "3.0";
+					var t = document.createElement("script");
+					t.async = !0, t.src = e;
+					var r = document.getElementsByTagName("script")[0];
+					r.parentNode.insertBefore(t, r)
+				}
+			}("https://s.pinimg.com/ct/core.js");
+
+			pintrk('load', '2617160657516');
+			pintrk('page');
+		</script>
+
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
+		</noscript>
+
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
+			/>
+		</noscript>
+
+		<script>
+			pintrk('track', 'checkout');
+		</script>
+			
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=signup&noscript=1"/>
+		</noscript>
+		<!-- End Pintrest Pixel -->
+
 	{{ else }}
 	{{ end }}
 	<!-- End Subscription Confirmation -->
@@ -226,4 +284,3 @@
 </head>
 
 <body ng-app="vibe" ng-controller="appCtrl" ng-cloak>
-	
