Facebook Pixel adjustments

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -63,7 +63,7 @@
             }(window,
                 document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
             fbq('init', '365893380475713'); // Insert your pixel ID here.
-            // fbq('track', 'PageView');
+            fbq('track', 'PageView');
             fbq('track', 'Lead');
         </script>
     
@@ -151,6 +151,7 @@
 			}(window,
 				document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
 			fbq('init', '365893380475713'); // Insert your pixel ID here.
+			fbq('track', 'PageView');
 			fbq('track', 'Purchase');
 		</script>
 
