Fixed FB Pixel syntax error

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -63,12 +63,10 @@
             }(window,
                 document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
             fbq('init', '365893380475713'); // Insert your pixel ID here.
-            fbq('track', 'PageView');
             fbq('track', 'Lead');
         </script>
     
-        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"
-            /></noscript>
+        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"/></noscript>
         <!-- DO NOT MODIFY -->
         <!-- End Facebook Pixel Code -->
 
@@ -151,7 +149,6 @@
 			}(window,
 				document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
 			fbq('init', '365893380475713'); // Insert your pixel ID here.
-			fbq('track', 'PageView');
 			fbq('track', 'Purchase');
 		</script>
 
