Updated Subscription page
Removed `header.html` partial
Added new header with *only* Vibe logo in `subscription.html`
Added link to homepage to Vibe logo on all pages

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="header">
     
     <div class="headerCol1">
-        <a href="/"><img class="logo" src={{ "/img/vlogo.png" | relURL }}></a>
+        <a href="https://vibeltd.co/"><img class="logo" src={{ "/img/vlogo.png" | relURL }}></a>
     </div>
     
     <div class="headerCol2">
