--- a/layouts/partials/subscription.html
+++ b/layouts/partials/subscription.html
@@ -1,5 +1,10 @@
 <div class="authHead">
-    {{ partial "header.html" . }}
+    <div class="headerSub">
+        <div class="headerCol1">
+            <a href="https://vibeltd.co/"><img class="logo" src={{ "/img/vlogo.png" | relURL }}></a>
+        </div>
+        <div></div>
+    </div>
 </div>
 
 <div id="wufoo-z1un51nb0s6pks0">
