--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -1,8 +1,15 @@
+@media only screen and (min-width: 1024px) {
+    .headerSub {
+        padding: 0 250px;
+    }
+}
+
 @media only screen and (max-width: 950px) {
 
     .authHead {
         height: 40vh;
     }
+
 
 .introTextD{
     font-family: 'Open Sans', sans-serif;
@@ -482,6 +489,10 @@ margin-top:60px;
     .confirmation {
         padding: 60px 10% 0;
         font-size: 24px;
+    }
+
+    .headerSub {
+        padding: 0 30px;
     }
 
     .authHead {
