--- a/layouts/index.html
+++ b/layouts/index.html
@@ -97,7 +97,7 @@
     <div class="whatBoxCol1"><img src={{ "/img/vchocolate.jpg" | relURL }} class="pImg"></div>
     <div class="whatBoxCol2">
         <div class="whatTitle">CRAFT CHOCOLATE</div>
-        <div class="whatText">Alluring dark chocolates, expertly sourced and produced in from bean to bar by master chocolatiers.
+        <div class="whatText">Alluring dark chocolates, expertly sourced and produced from bean to bar by master chocolatiers.
             <BR> 2 bars
         </div>
     </div>
